--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
@@ -77,6 +77,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attribute.cs" />
+    <Compile Include="Attributes.cs" />
     <Compile Include="DataUtilityCommon.cs" />
     <Compile Include="Forms\DataColumn\ColumnHtmlTable.cs" />
     <Compile Include="Forms\DataTable\CustomActions\AddData.cs" />
@@ -134,9 +136,13 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\ProcBuilder.cs" />
+    <Compile Include="HTMLBuilder.cs" />
     <Compile Include="HTMLTableData.cs" />
+    <Compile Include="LJCHTML.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextBuilder.cs" />
+    <Compile Include="TextState.cs" />
     <EmbeddedResource Include="Forms\TableNameSelect.resx">
       <DependentUpon>TableNameSelect.cs</DependentUpon>
     </EmbeddedResource>
@@ -214,9 +220,11 @@
     <Content Include="bin\Debug\SQLScript\1Tables\sp_DataTable.sql" />
     <Content Include="Doc\BuildersCompare.txt" />
     <Content Include="Doc\ColumnHTMLTable.xml" />
+    <Content Include="Doc\HTMLBuilder.xml" />
     <Content Include="Doc\HTMLTableData.xml" />
     <Content Include="Doc\MyProcBuilder.xml" />
     <Content Include="Doc\ProcBuilder.xml" />
+    <Content Include="Doc\TextBuilder.xml" />
     <Content Include="Forms\DataTable\ACreate.txt" />
     <Content Include="Forms\DataTable\BCreate.txt" />
     <Content Include="Naming.txt" />
