--- a/CoreTestApps/LJCNetCommonTest/LJCNetCommonTest/LJCNetCommonTest.csproj
+++ b/CoreTestApps/LJCNetCommonTest/LJCNetCommonTest/LJCNetCommonTest.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ProgramNetCommonTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBuilderTest.cs" />
+    <Compile Include="TextCommon.cs" />
     <Compile Include="XMLBuilderTest.cs" />
   </ItemGroup>
   <ItemGroup>
