--- a/CoreUtilities/LJCBackupChanges/LJCBackupChangesLib/LJCBackupChangesLib.csproj
+++ b/CoreUtilities/LJCBackupChanges/LJCBackupChangesLib/LJCBackupChangesLib.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\LJCBackupChangesLib.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -49,6 +50,10 @@
   <ItemGroup>
     <Compile Include="BackupChanges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\LJCBackupChangesLib.xml" />
+    <Content Include="Doc\BackupChanges.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
