--- a/CoreUtilities/LJCBackupCreateChanges/LJCCreateFileChangesLib/LJCCreateFileChangesLib.csproj
+++ b/CoreUtilities/LJCBackupCreateChanges/LJCCreateFileChangesLib/LJCCreateFileChangesLib.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\LJCCreateFileChangesLib.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -49,6 +50,9 @@
   <ItemGroup>
     <Compile Include="CreateFileChanges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Doc\ProjectCreateFileChanges.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
