--- a/CoreUtilities/LJCBackupCreateChanges/LJCCreateFileChangesLib/LJCCreateFileChangesLib.csproj
+++ b/CoreUtilities/LJCBackupCreateChanges/LJCCreateFileChangesLib/LJCCreateFileChangesLib.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Doc\CreateFileChanges.xml" />
     <Content Include="Doc\ProjectCreateFileChanges.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
