--- a/CoreUtilities/LJCBackupChanges/LJCBackupChanges/LJCBackupChanges.csproj
+++ b/CoreUtilities/LJCBackupChanges/LJCBackupChanges/LJCBackupChanges.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Content Include="bin\Debug\BackupChangesDefaults.txt" />
     <Content Include="bin\Debug\BackupChangesDefaultsStage.txt" />
+    <Content Include="Doc\ProgramBackupChanges.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LJCBackupChangesLib\LJCBackupChangesLib.csproj">
