--- a/CoreUtilities/LJCBackupCreateChanges/LJCCreateFileChanges/LJCCreateFileChanges.csproj
+++ b/CoreUtilities/LJCBackupCreateChanges/LJCCreateFileChanges/LJCCreateFileChanges.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\LJCCreateFileChanges.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -59,6 +60,8 @@
     <Content Include="bin\Debug\CreateFileChangesDefaultsPassport.txt" />
     <Content Include="bin\Debug\CreateFileChangesDefaultsStage.txt" />
     <Content Include="bin\Debug\CreateFileChangesDefaultsWeb.txt" />
+    <Content Include="bin\Debug\LJCCreateFileChanges.xml" />
+    <Content Include="Doc\ProgramCreateFileChanges.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LJCCreateFileChangesLib\LJCCreateFileChangesLib.csproj">
