--- a/CoreAssemblies/LJCLibraries/LJCWinFormCommon/LJCWinFormCommon.csproj
+++ b/CoreAssemblies/LJCLibraries/LJCWinFormCommon/LJCWinFormCommon.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ControlValues.cs" />
     <Compile Include="FormCommon.cs" />
     <Compile Include="FormPoint.cs" />
+    <Compile Include="GridHTMLTable.cs" />
     <Compile Include="ModuleReference.cs" />
     <Compile Include="ModuleReferences.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
